// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API should always have the same amount of basic authenticated endpoints 1`] = `Array []`;

exports[`API should always have the same amount of bearer authenticated endpoints 1`] = `
Array [
  "get /openAPI",
]
`;

exports[`API should always have the same amount of endpoints 1`] = `
Array [
  "get /openAPI",
  "get /phones/brands",
  "get /ping",
]
`;

exports[`API should always have the same amount of non authenticated endpoints 1`] = `
Array [
  "get /phones/brands",
  "get /ping",
  "options /openAPI",
  "options /phones/brands",
  "options /ping",
]
`;

exports[`API should always have the same amount of optionally authenticated endpoints 1`] = `
Array [
  "get /openAPI",
]
`;

exports[`API should always have the same amount of publicly documented endpoints 1`] = `
Array [
  "get /openAPI",
  "get /phones/brands",
  "get /ping",
]
`;

exports[`API should produce a valid OpenAPI file 1`] = `
Object {
  "result": Object {
    "errors": Array [],
  },
}
`;

exports[`API should work 1`] = `
Object {
  "API": Object {
    "components": Object {
      "headers": Object {},
      "parameters": Object {},
      "requestBodies": Object {},
      "responses": Object {},
      "schemas": Object {},
      "securitySchemes": Object {
        "bearerAuth": Object {
          "description": "Bearer authentication with a user API token",
          "scheme": "bearer",
          "type": "http",
        },
      },
    },
    "info": Object {
      "description": "A project to recycle phones",
      "title": "phone-coop-back",
      "version": "1.1.0",
    },
    "openapi": "3.0.3",
    "paths": Object {
      "/openAPI": Object {
        "get": Object {
          "operationId": "getOpenAPI",
          "parameters": Array [],
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "type": "object",
                  },
                },
              },
              "description": "Provides the private Open API documentation",
            },
          },
          "security": Array [
            Object {},
            Object {
              "bearerAuth": Array [
                "admin",
              ],
            },
          ],
          "summary": "Get API documentation.",
          "tags": Array [
            "system",
          ],
          "x-whook": Object {
            "private": false,
          },
        },
        "options": Object {
          "operationId": "optionsWithCORS",
          "parameters": Array [
            Object {
              "in": "query",
              "name": "access_token",
              "schema": Object {
                "type": "string",
              },
            },
          ],
          "responses": Object {
            "200": Object {
              "description": "CORS sent.",
            },
          },
          "summary": "Enable OPTIONS for CORS",
          "tags": Array [
            "CORS",
          ],
          "x-whook": Object {
            "private": true,
            "sourceOperationId": "getOpenAPI",
            "suffix": "CORS",
            "type": "http",
          },
        },
      },
      "/phones/brands": Object {
        "get": Object {
          "operationId": "getPhoneBrands",
          "parameters": Array [],
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "items": Object {
                      "properties": Object {
                        "id": Object {
                          "minimum": 1,
                          "type": "number",
                        },
                        "label": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "id",
                        "label",
                      ],
                      "type": "object",
                    },
                    "type": "array",
                  },
                },
              },
              "description": "Success",
            },
          },
          "summary": "Provide a list of phones brands",
          "tags": Array [],
        },
        "options": Object {
          "operationId": "optionsWithCORS",
          "parameters": Array [],
          "responses": Object {
            "200": Object {
              "description": "CORS sent.",
            },
          },
          "summary": "Enable OPTIONS for CORS",
          "tags": Array [
            "CORS",
          ],
          "x-whook": Object {
            "private": true,
            "sourceOperationId": "getPhoneBrands",
            "suffix": "CORS",
            "type": "http",
          },
        },
      },
      "/ping": Object {
        "get": Object {
          "operationId": "getPing",
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "additionalProperties": false,
                    "properties": Object {
                      "pong": Object {
                        "enum": Array [
                          "pong",
                        ],
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                },
              },
              "description": "Pong",
            },
          },
          "summary": "Checks API's availability.",
          "tags": Array [
            "system",
          ],
        },
        "options": Object {
          "operationId": "optionsWithCORS",
          "parameters": Array [],
          "responses": Object {
            "200": Object {
              "description": "CORS sent.",
            },
          },
          "summary": "Enable OPTIONS for CORS",
          "tags": Array [
            "CORS",
          ],
          "x-whook": Object {
            "private": true,
            "sourceOperationId": "getPing",
            "suffix": "CORS",
            "type": "http",
          },
        },
      },
    },
    "servers": Array [
      Object {
        "url": "http://localhost:1337",
      },
    ],
    "tags": Array [
      Object {
        "name": "system",
      },
    ],
  },
  "logCalls": Array [
    Array [
      "debug",
      "🦄 - Initializing the API service!",
    ],
  ],
}
`;
